Save to json file instead of yaml Proxy Messaging Compatibility Trickle bounties can be modified to leave part of the bounty on the player. Added broadcast alias You can now go back pages in bounty help Player data is now all stored together The %notbounties_wanted% placeholder will no longer show anything if the player has less than the minimum bounty amount